820.21
------
ALL:
* concentrated_flame_burn_debuff doesn't stack so we need to check if it's refreshable
* Add anima_of_death_essence

DH:
* Update rotation to reflect guide on Icy-Veins (prioritize fracture over SC)

MONK: 
* Optimize RJW uptime
* Prioritze KS on cleave, BoS on single target

820.20
------
ALL:
* Update script names to reflect patch 8.2.0 (and replace Icy-Veins with Ovale_TankScripts)
* Add Template for Azerite essences
* Add concentrated_flame_essence to AzeriteEssenceMain()
* Add worldvein_resonance_essence to AzeriteEssenceOffensiveCooldowns()
* Add memory_of_lucid_dreams_essence to AzeriteEssenceDefensiveCooldowns()

DH:
* Add function to calculate power gain from Shear/Fracture so it's easier to check to not overcap (shear/fracture now gains additional pain when in meta)
* Add rotation during meta

DRUID: 
* replace swipe to swipe_bear again (different id's after 8.2.0)
* we can remove corruption in bear form now, so no longer need to check if we're not.
* Soothe first, dispel after

MONK:
* Arcane torrent first, detox after
* Check if we have black_ox_brew as a short circuit for the next checks
* Implement Peak of Serenity proposed rotation for ST and AOE (there no longer is a different rotation for BoC)

PALADIN: 
* swap AW and Seraphim
* can use bubble when solo
* swap aegis of light
* AOE rotation - HOTS when consecration is up (or with blessed hammer)
* use consecration when in range
* Dump sotr when Bastion of light is about to come of cooldown
* Stop banking sotr charges, we want to be using them
* Arcane torrent first, cleanse after

820.19
------
ALL:
* Update toc

815.18
------
ALL:
* Fix for using consumables, need an update of Ovale to make this effective

DRUID:
* replace swipe_bear with swipe

MONK:
* Add RJW as fallback, when there is nothing else to cast
* Only suggest TP when KS is on cooldown

WARRIOR:
* don't recommend charge for huge bosses when already in melee range
* don't shockwave as part of the rotation